--- a/draft/table.html
+++ b/draft/table.html
@@ -43,6 +43,19 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12">
+						<div id="todelete">
+							测试图片外链地址：
+							http://kaikaiiiiiii.github.io/sdsrc/testframebg.jpg
+							http://kaikaiiiiiii.github.io/sdsrc/testframebg2.jpg
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnb01.png
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnb02.png
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnb03.png
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnb04.png
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnr01.png
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnr02.png
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnr03.png
+							http://kaikaiiiiiii.github.io/sdsrc/testpawnr04.png
+						</div>
 					</div>
 				</div>
 				<div class="row">
